--- a/prod/client/assets/vue-ssr-client-manifest.json
+++ b/prod/client/assets/vue-ssr-client-manifest.json
@@ -1,23 +1,27 @@
 {
   "publicPath": "/assets/",
   "all": [
-    "common.f03fc83b0370b4f5c262.js.map",
-    "pages/Admin.7a05b6626ba30c67ce24.js",
-    "layouts/default.fa89462ac537131991c5.js",
-    "pages/About.fed67c0ad5c05c5b5dbd.js",
-    "common.f03fc83b0370b4f5c262.js",
-    "app.e7f78a63b03ef8beee22.js",
-    "manifest.ad63f6a86dac537e73e9.js",
+    "layouts/default.4bc03a583c378e154dd4.js.map",
+    "pages/Admin.a7a02b6b46fcb33bf90f.js",
+    "pages/posts/_slug.e872a13215d269e33ba9.js",
+    "pages/Blog.c7a34143ab4dabcb2447.js",
+    "layouts/default.4bc03a583c378e154dd4.js",
+    "pages/About.7b5c44b5a4f4d411c948.js",
+    "common.fd79a99c74969b85974c.js",
+    "app.15f4d526b5b69ded9af3.js",
+    "manifest.dbc701b05d3bc4108685.js",
     "common.94bcc32b9dbf7bb21e009fcad05060bc.css",
     "LICENSES",
-    "pages/Admin.7a05b6626ba30c67ce24.js.map",
-    "pages/index.345ab8caeac79008ae3e.js.map",
-    "layouts/default.fa89462ac537131991c5.js.map",
-    "pages/About.fed67c0ad5c05c5b5dbd.js.map",
-    "pages/index.345ab8caeac79008ae3e.js",
-    "app.e7f78a63b03ef8beee22.js.map",
+    "pages/Admin.a7a02b6b46fcb33bf90f.js.map",
+    "pages/index.7746e1c5fbac8f0bfe38.js.map",
+    "pages/posts/_slug.e872a13215d269e33ba9.js.map",
+    "pages/Blog.c7a34143ab4dabcb2447.js.map",
+    "pages/index.7746e1c5fbac8f0bfe38.js",
+    "pages/About.7b5c44b5a4f4d411c948.js.map",
+    "common.fd79a99c74969b85974c.js.map",
+    "app.15f4d526b5b69ded9af3.js.map",
     "common.94bcc32b9dbf7bb21e009fcad05060bc.css.map",
-    "manifest.ad63f6a86dac537e73e9.js.map",
+    "manifest.dbc701b05d3bc4108685.js.map",
     "icons/icon_16.d00bMwo0t0c.png",
     "icons/icon_120.d00bMwo0t0c.png",
     "icons/icon_144.d00bMwo0t0c.png",
@@ -30,958 +34,980 @@
     "index.ssr.html"
   ],
   "initial": [
-    "manifest.ad63f6a86dac537e73e9.js",
-    "common.f03fc83b0370b4f5c262.js",
-    "app.e7f78a63b03ef8beee22.js"
+    "manifest.dbc701b05d3bc4108685.js",
+    "common.fd79a99c74969b85974c.js",
+    "app.15f4d526b5b69ded9af3.js"
   ],
   "async": [
-    "pages/Admin.7a05b6626ba30c67ce24.js",
-    "layouts/default.fa89462ac537131991c5.js",
-    "pages/About.fed67c0ad5c05c5b5dbd.js",
-    "pages/index.345ab8caeac79008ae3e.js"
+    "pages/Admin.a7a02b6b46fcb33bf90f.js",
+    "pages/posts/_slug.e872a13215d269e33ba9.js",
+    "pages/Blog.c7a34143ab4dabcb2447.js",
+    "layouts/default.4bc03a583c378e154dd4.js",
+    "pages/About.7b5c44b5a4f4d411c948.js",
+    "pages/index.7746e1c5fbac8f0bfe38.js"
   ],
   "modules": {
     "34743616": [
-      4,
-      0
+      6,
+      17
     ],
     "71787424": [
-      4,
-      0
+      6,
+      17
     ],
     "c9a5df2a": [
-      4,
-      0
-    ],
-    "929ff236": [
-      1,
-      9
+      6,
+      17
     ],
     "5c7e4673": [
       1,
-      9
-    ],
-    "cb10d370": [
-      4,
-      0
-    ],
-    "5dea6790": [
-      4,
-      0
-    ],
-    "8693773e": [
-      4,
-      0
-    ],
-    "aca5fa7a": [
-      4,
-      0
-    ],
-    "88a08fd8": [
-      13,
-      10
-    ],
-    "2d74c3ea": [
-      4,
-      0
-    ],
-    "37ed05fa": [
-      4,
-      0
-    ],
-    "2e99d4d9": [
-      4,
-      0
-    ],
-    "2dc825e8": [
-      2,
       11
     ],
-    "a8827e0c": [
-      4,
-      0
+    "cb10d370": [
+      6,
+      17
     ],
-    "91bcd71c": [
-      13,
-      10
+    "5dea6790": [
+      6,
+      17
+    ],
+    "8693773e": [
+      6,
+      17
+    ],
+    "aca5fa7a": [
+      6,
+      17
+    ],
+    "88a08fd8": [
+      15,
+      12
+    ],
+    "2d74c3ea": [
+      6,
+      17
+    ],
+    "37ed05fa": [
+      6,
+      17
+    ],
+    "2e99d4d9": [
+      6,
+      17
+    ],
+    "a8827e0c": [
+      6,
+      17
+    ],
+    "18a9147d": [
+      3,
+      14
     ],
     "e977cad8": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "d0c51f14": [
-      4,
-      0
+      6,
+      17
     ],
     "45b7eb92": [
-      4,
-      0
+      6,
+      17
     ],
     "645e2f7a": [
-      4,
-      0
+      6,
+      17
     ],
     "51c06cff": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "d2aa02c4": [
-      4,
-      0
+      6,
+      17
     ],
     "8eea9102": [
-      4,
-      0
+      6,
+      17
     ],
     "55076fc8": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
+    ],
+    "621e8830": [
+      2,
+      13
     ],
     "18a16dd6": [
-      4,
-      0
+      6,
+      17
     ],
     "0b1e29b4": [
-      4,
-      0
+      6,
+      17
     ],
     "2e4edf5a": [
-      4,
-      0
+      6,
+      17
     ],
     "0625339c": [
-      4,
-      0
+      6,
+      17
     ],
     "255c3176": [
-      13,
-      10
-    ],
-    "9bbbeb60": [
-      1,
-      9
+      15,
+      12
     ],
     "eaa652e0": [
-      4,
-      0
+      6,
+      17
     ],
     "3ee2a62a": [
-      4,
-      0
+      6,
+      17
+    ],
+    "72adb7b2": [
+      3,
+      14
     ],
     "10a45c9c": [
-      4,
-      0
+      6,
+      17
     ],
     "3fa0e569": [
-      4,
-      0
+      6,
+      17
     ],
     "d29f67d2": [
       1,
-      9
+      11
     ],
     "d7684e34": [
-      4,
-      0
+      6,
+      17
     ],
     "64e53e12": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "106740b1": [
-      4,
-      0
+      6,
+      17
     ],
     "1369fd2f": [
-      3,
-      12
+      5,
+      16
     ],
     "ce20da44": [
-      4,
-      0
+      6,
+      17
     ],
     "a923acd0": [
-      4,
-      0
-    ],
-    "099f05dc": [
-      1,
-      9
+      6,
+      17
     ],
     "474cfc8d": [
-      4,
-      0
+      6,
+      17
     ],
     "2bafea54": [
-      4,
-      0
+      6,
+      17
     ],
     "229837bb": [
-      4,
-      0
-    ],
-    "bd292434": [
-      1,
-      9
+      6,
+      17
     ],
     "9a6232ee": [
-      4,
-      0
+      6,
+      17
     ],
     "5e59e63e": [
-      4,
-      0
+      6,
+      17
     ],
     "fd0d1fe0": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "bc1c6616": [
-      4,
-      0
+      6,
+      17
     ],
     "0b6f5a36": [
-      4,
-      0
+      6,
+      17
     ],
     "4cee839d": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "3eedab15": [
-      4,
-      0
+      6,
+      17
     ],
     "33827e83": [
-      4,
-      0
+      6,
+      17
     ],
     "52236eff": [
-      5,
       7,
-      14,
-      15
-    ],
-    "7aa6c412": [
-      1,
-      9
+      9,
+      18,
+      19
     ],
     "13e20794": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "32bdd064": [
-      4,
-      0
+      6,
+      17
     ],
     "dd2a659a": [
-      4,
-      0
+      6,
+      17
     ],
     "9e9d0166": [
-      4,
-      0
+      6,
+      17
     ],
     "7ef22bdc": [
       1,
-      9
+      11
+    ],
+    "49cd9b5e": [
+      15,
+      12
     ],
     "7b4b049a": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "a892edc0": [
-      4,
-      0
+      6,
+      17
     ],
     "5b38d5f6": [
-      4,
-      0
+      6,
+      17
     ],
     "e0419134": [
-      4,
-      0
+      6,
+      17
     ],
     "88d647da": [
       1,
-      9
-    ],
-    "7173bfb7": [
-      4,
-      0
-    ],
-    "1e8496cc": [
-      4,
-      0
-    ],
-    "7f97e162": [
-      13,
-      10
-    ],
-    "64b938ef": [
-      4,
-      0
-    ],
-    "7d56f4d2": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "67afb57c": [
-      4,
-      0
-    ],
-    "172d717a": [
-      4,
-      0
-    ],
-    "d0d2c236": [
-      4,
-      0
-    ],
-    "49785cd6": [
-      4,
-      0
-    ],
-    "107d77e7": [
-      4,
-      0
-    ],
-    "5e7ea45c": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "947d34f0": [
-      2,
       11
     ],
-    "680456e0": [
+    "7173bfb7": [
+      6,
+      17
+    ],
+    "cd8ea138": [
+      3,
+      14
+    ],
+    "1e8496cc": [
+      6,
+      17
+    ],
+    "7f97e162": [
+      15,
+      12
+    ],
+    "64b938ef": [
+      6,
+      17
+    ],
+    "7d56f4d2": [
+      7,
+      9,
+      18,
+      19
+    ],
+    "67afb57c": [
+      6,
+      17
+    ],
+    "172d717a": [
+      6,
+      17
+    ],
+    "d0d2c236": [
+      6,
+      17
+    ],
+    "49785cd6": [
+      6,
+      17
+    ],
+    "107d77e7": [
+      6,
+      17
+    ],
+    "5e7ea45c": [
+      7,
+      9,
+      18,
+      19
+    ],
+    "947d34f0": [
       4,
       0
+    ],
+    "680456e0": [
+      6,
+      17
     ],
     "2cf2d4ea": [
-      4,
-      0
+      6,
+      17
     ],
     "0df04838": [
-      4,
-      0
+      6,
+      17
     ],
     "02033b56": [
-      4,
-      0
+      6,
+      17
     ],
     "e077cf3e": [
-      4,
-      0
+      6,
+      17
     ],
     "7c45b238": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "14f34f34": [
-      4,
-      0
+      6,
+      17
     ],
     "a73b0450": [
-      4,
-      0
+      6,
+      17
     ],
     "0482b3e4": [
-      4,
-      0
+      6,
+      17
+    ],
+    "e090bef4": [
+      3,
+      14
     ],
     "f7583e16": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "562e2e12": [
-      13,
-      10
+      15,
+      12
     ],
     "5e092e02": [
       1,
-      9
+      11
     ],
     "fe60a9f2": [
-      4,
-      0
+      6,
+      17
     ],
     "0483c257": [
-      4,
-      0
+      6,
+      17
     ],
     "a37e642c": [
-      4,
-      0
+      6,
+      17
     ],
     "fed496f4": [
-      4,
-      0
+      6,
+      17
     ],
     "cbae1bd6": [
-      4,
-      0
+      6,
+      17
     ],
     "870ab4d8": [
-      4,
-      0
+      6,
+      17
     ],
     "26b50220": [
-      4,
-      0
+      6,
+      17
     ],
     "1ecb6ea4": [
-      4,
-      0
+      6,
+      17
     ],
     "2f428b6c": [
       1,
-      9
+      11
     ],
     "6d8bd947": [
-      4,
-      0
+      6,
+      17
     ],
     "0f4c669a": [
-      4,
-      0
+      6,
+      17
     ],
     "2438e970": [
-      4,
-      0
+      6,
+      17
     ],
     "31467ad4": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "d8d3f89a": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "1499d10a": [
-      4,
-      0
+      6,
+      17
     ],
     "9d102996": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "2028ebc9": [
-      4,
-      0
+      6,
+      17
     ],
     "1c0379e3": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "4698d11c": [
-      4,
-      0
+      6,
+      17
     ],
     "5681189a": [
-      4,
-      0
+      6,
+      17
     ],
     "b25e5a00": [
-      4,
-      0
+      6,
+      17
     ],
     "43bdf916": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "64912bf1": [
       1,
-      9
+      11
     ],
     "cf22443c": [
-      4,
-      0
+      6,
+      17
     ],
     "3fd493d2": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "0a15f7a6": [
-      4,
-      0
+      6,
+      17
     ],
     "0b1b5941": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "0c2def28": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "64f3916c": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "2be03ee2": [
-      4,
-      0
+      6,
+      17
     ],
     "0e30fa5b": [
-      4,
-      0
+      6,
+      17
     ],
     "0579d661": [
-      4,
-      0
+      6,
+      17
+    ],
+    "1a7e66c8": [
+      2,
+      13
     ],
     "a85f3f76": [
-      4,
-      0
+      6,
+      17
     ],
     "36ad6d92": [
-      4,
-      0
+      6,
+      17
     ],
     "7870e0a3": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "456916c8": [
-      4,
-      0
+      6,
+      17
     ],
     "210e79e0": [
-      4,
-      0
+      6,
+      17
     ],
     "73dd295e": [
-      4,
-      0
+      6,
+      17
+    ],
+    "6149bb46": [
+      15,
+      12
     ],
     "5c01d15c": [
-      4,
-      0
+      6,
+      17
     ],
     "175a852f": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "4d926c57": [
-      4,
-      0
+      6,
+      17
     ],
     "4ebf2f56": [
-      4,
-      0
+      6,
+      17
+    ],
+    "484425fa": [
+      2,
+      13
     ],
     "057edab1": [
       1,
-      9
+      11
     ],
     "4154936e": [
-      4,
-      0
+      6,
+      17
     ],
     "9fa47a64": [
-      4,
-      0
+      6,
+      17
     ],
     "87d12d60": [
-      4,
-      0
+      6,
+      17
     ],
     "7d7ac104": [
-      4,
-      0
+      6,
+      17
     ],
     "062cd7d7": [
-      4,
-      0
+      6,
+      17
     ],
     "9a9b7efe": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "0d3e6114": [
-      2,
-      11
+      4,
+      0
     ],
     "34e4516a": [
-      4,
-      0
+      6,
+      17
     ],
     "c98036cc": [
-      4,
-      0
+      6,
+      17
     ],
     "34a0790b": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "7fdb7fb5": [
-      4,
-      0
+      6,
+      17
     ],
     "81cd08f8": [
-      4,
-      0
+      6,
+      17
     ],
     "10b17756": [
-      4,
-      0
+      6,
+      17
     ],
     "4f055832": [
-      4,
-      0
+      6,
+      17
     ],
     "2188eb98": [
-      4,
-      0
-    ],
-    "18838ce9": [
-      2,
-      11
+      6,
+      17
     ],
     "221d4281": [
-      4,
-      0
+      6,
+      17
     ],
     "bfe36e56": [
-      4,
-      0
+      6,
+      17
+    ],
+    "7d28890e": [
+      7,
+      9,
+      18,
+      19
+    ],
+    "035ed791": [
+      6,
+      17
     ],
     "875da2ac": [
-      4,
-      0
+      6,
+      17
     ],
     "101dff2c": [
-      4,
-      0
+      6,
+      17
     ],
     "5e313c00": [
-      4,
-      0
+      6,
+      17
     ],
     "ad9956c6": [
-      4,
-      0
+      6,
+      17
     ],
     "6f3e6c9e": [
-      4,
-      0
+      6,
+      17
     ],
     "0dcfe0fa": [
       1,
-      9
+      11
     ],
     "6708158e": [
       1,
-      9
+      11
     ],
     "5791cd7d": [
       1,
-      9
-    ],
-    "465781db": [
-      4,
-      0
-    ],
-    "3f42717b": [
-      4,
-      0
-    ],
-    "b9846196": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "6b8c837a": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "035ed791": [
-      4,
-      0
-    ],
-    "7bcb24ff": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "613b49c4": [
-      2,
       11
     ],
-    "12b206eb": [
+    "1b37a9d4": [
       4,
       0
+    ],
+    "465781db": [
+      6,
+      17
+    ],
+    "3f42717b": [
+      6,
+      17
+    ],
+    "b9846196": [
+      7,
+      9,
+      18,
+      19
+    ],
+    "6b8c837a": [
+      7,
+      9,
+      18,
+      19
+    ],
+    "7bcb24ff": [
+      7,
+      9,
+      18,
+      19
+    ],
+    "613b49c4": [
+      4,
+      0
+    ],
+    "12b206eb": [
+      6,
+      17
     ],
     "89fb6bd2": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "dc1820b2": [
-      4,
-      0
+      6,
+      17
     ],
     "d0e584b6": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "11d68e4a": [
-      4,
-      0
+      6,
+      17
     ],
     "5aa4bacd": [
-      4,
-      0
+      6,
+      17
     ],
     "0df0c25c": [
-      4,
-      0
+      6,
+      17
+    ],
+    "7059b270": [
+      3,
+      14
     ],
     "783222fc": [
-      4,
-      0
+      6,
+      17
     ],
     "53c08b51": [
-      4,
-      0
+      6,
+      17
     ],
     "a12394e4": [
-      4,
-      0
+      6,
+      17
     ],
     "552f7151": [
-      13,
-      10
+      15,
+      12
     ],
     "d0c9aaca": [
+      6,
+      17
+    ],
+    "94588b56": [
       4,
       0
-    ],
-    "5e6084f1": [
-      13,
-      10
     ],
     "64342bc4": [
-      4,
-      0
+      6,
+      17
     ],
     "aca7c3f2": [
       1,
-      9
+      11
     ],
     "0e9655f0": [
-      4,
-      0
+      6,
+      17
     ],
     "40391c11": [
-      4,
-      0
+      6,
+      17
     ],
     "4a90a558": [
-      4,
-      0
+      6,
+      17
     ],
     "2d9a3e8f": [
-      4,
-      0
+      6,
+      17
     ],
     "1b032524": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "211d48d0": [
       1,
-      9
+      11
     ],
     "3fef53a4": [
-      4,
-      0
+      6,
+      17
     ],
     "a29f4cc0": [
-      13,
-      10
-    ],
-    "12dacd30": [
-      4,
-      0
-    ],
-    "598b1454": [
-      4,
-      0
-    ],
-    "7bb2f2a6": [
-      4,
-      0
-    ],
-    "17a3572a": [
-      4,
-      0
-    ],
-    "7d28890e": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "3a08e68b": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "9c7e6144": [
-      4,
-      0
-    ],
-    "3d17873c": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "419a6216": [
-      13,
-      10
-    ],
-    "56f40203": [
-      4,
-      0
-    ],
-    "1134af74": [
-      4,
-      0
-    ],
-    "122d8377": [
-      4,
-      0
-    ],
-    "1d47a54c": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "038fbdd3": [
-      4,
-      0
-    ],
-    "ef940b1a": [
-      13,
-      10
-    ],
-    "395407e2": [
-      3,
+      15,
       12
     ],
+    "12dacd30": [
+      6,
+      17
+    ],
+    "598b1454": [
+      6,
+      17
+    ],
+    "7bb2f2a6": [
+      6,
+      17
+    ],
+    "17a3572a": [
+      6,
+      17
+    ],
+    "3a08e68b": [
+      7,
+      9,
+      18,
+      19
+    ],
+    "9c7e6144": [
+      6,
+      17
+    ],
+    "3d17873c": [
+      7,
+      9,
+      18,
+      19
+    ],
+    "419a6216": [
+      15,
+      12
+    ],
+    "56f40203": [
+      6,
+      17
+    ],
+    "1134af74": [
+      6,
+      17
+    ],
+    "122d8377": [
+      6,
+      17
+    ],
+    "1d47a54c": [
+      7,
+      9,
+      18,
+      19
+    ],
+    "038fbdd3": [
+      6,
+      17
+    ],
+    "ef940b1a": [
+      15,
+      12
+    ],
+    "395407e2": [
+      5,
+      16
+    ],
     "d712336a": [
-      4,
-      0
+      6,
+      17
     ],
     "95b36600": [
-      4,
-      0
+      6,
+      17
     ],
     "28fd2dbf": [
-      4,
-      0
+      6,
+      17
+    ],
+    "22f7ed64": [
+      2,
+      13
     ],
     "d93d7826": [
-      5,
       7,
-      14,
-      15
+      9,
+      18,
+      19
     ],
     "7b4ec17d": [
-      4,
-      0
+      6,
+      17
+    ],
+    "f2d6f7e0": [
+      2,
+      13
     ],
     "4bbab687": [
-      4,
-      0
+      6,
+      17
     ],
     "5fda5646": [
-      4,
-      0
+      6,
+      17
     ],
     "4da865c8": [
-      4,
-      0
+      6,
+      17
     ],
     "78bd2b16": [
       1,
-      9
+      11
     ],
     "6e072836": [
-      4,
-      0
+      6,
+      17
     ],
     "731a9af9": [
-      4,
-      0
+      6,
+      17
     ],
     "d3f085b2": [
       1,
-      9
+      11
     ]
   }
 }
