--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-stage-0": "^6.24.1",
+    "backpack-core": "^0.4.2",
     "es6-promise": "^4.1.1",
     "nuxt": "latest",
     "vue-picture-input": "^1.13.2",
