--- a/prod/server/package.json
+++ b/prod/server/package.json
@@ -18,7 +18,7 @@
     "firebase-functions": "^0.6.1",
     "lodash": "^4.17.4",
     "multer": "^1.3.0",
-    "nuxt": "latest",
+    "nuxt": "1.0.0-rc11",
     "vue": "~2.4.2",
     "vue-meta": "^1.0.5",
     "vue-router": "^2.7.0",
