--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "copyassets": "yarn copydist && yarn copystatic",
     "copydist": "cp -R prod/server/nuxt/dist/ prod/client/assets",
     "copystatic": "cp -R src/static/ prod/client",
-    "clean": "",
-    "build": "yarn build:nuxt && yarn copyassets",
+    "clean": "rimraf prod/client/assets/*",
+    "build": "yarn build:nuxt && yarn clean && yarn copyassets",
     "build:nuxt": "cd \"src\" && yarn build",
     "serve": "firebase serve --only functions,hosting",
     "deploy": "firebase deploy"
