--- a/prod/client/assets/vue-ssr-client-manifest.json
+++ b/prod/client/assets/vue-ssr-client-manifest.json
@@ -1,797 +1,577 @@
 {
   "publicPath": "/assets/",
   "all": [
-    "pages/index.5a2f7f03a89898dbff3f.js.map",
-    "pages/index.5a2f7f03a89898dbff3f.js",
-    "pages/page2.52841f3950dd3dc36f0f.js",
-    "layouts/default.3e9994d32471f814c36e.js",
-    "common.420fdbe1eb3c4c59efab.js",
-    "app.14131831a375abe317db.js",
-    "manifest.c1a7440e184aa0a451bf.js",
-    "common.90315f7aefe3fdddfaf1056504853915.css",
+    "app.69ca4861c784457d8c9f.js",
+    "pages/page3.b02e94c372d9e95d502b.js",
+    "pages/index.a12c8477ecd68f6d553f.js",
+    "layouts/default.6c6af203c549c963877b.js",
+    "vendor.b8445a2d00fe96384dd2.js",
+    "pages/page2.ddcc9972e8b16224fc8e.js",
+    "manifest.e790fd382e75b83a9841.js",
+    "app.7719562d20af3b00ee3f21b510e16e8c.css",
     "LICENSES",
-    "pages/page3.578e81b0b66528e34be4.js",
-    "pages/page3.578e81b0b66528e34be4.js.map",
-    "pages/page2.52841f3950dd3dc36f0f.js.map",
-    "layouts/default.3e9994d32471f814c36e.js.map",
-    "common.420fdbe1eb3c4c59efab.js.map",
-    "app.14131831a375abe317db.js.map",
-    "common.90315f7aefe3fdddfaf1056504853915.css.map",
-    "manifest.c1a7440e184aa0a451bf.js.map",
     "index.spa.html",
     "index.ssr.html"
   ],
   "initial": [
-    "manifest.c1a7440e184aa0a451bf.js",
-    "common.420fdbe1eb3c4c59efab.js",
-    "app.14131831a375abe317db.js"
+    "manifest.e790fd382e75b83a9841.js",
+    "vendor.b8445a2d00fe96384dd2.js",
+    "app.69ca4861c784457d8c9f.js"
   ],
   "async": [
-    "pages/index.5a2f7f03a89898dbff3f.js",
-    "pages/page2.52841f3950dd3dc36f0f.js",
-    "layouts/default.3e9994d32471f814c36e.js",
-    "pages/page3.578e81b0b66528e34be4.js"
+    "pages/page3.b02e94c372d9e95d502b.js",
+    "pages/index.a12c8477ecd68f6d553f.js",
+    "layouts/default.6c6af203c549c963877b.js",
+    "pages/page2.ddcc9972e8b16224fc8e.js"
   ],
   "modules": {
-    "11067752": [
-      9,
-      10
+    "23433308": [
+      4
     ],
-    "34743616": [
-      4,
-      13
+    "4d8e026c": [
+      4
     ],
-    "71787424": [
-      4,
-      13
-    ],
-    "c9a5df2a": [
-      4,
-      13
-    ],
-    "cb10d370": [
-      4,
-      13
-    ],
-    "5dea6790": [
-      4,
-      13
-    ],
-    "8693773e": [
-      4,
-      13
+    "d6e7c032": [
+      4
     ],
     "aca5fa7a": [
-      4,
-      13
+      4
+    ],
+    "46239d22": [
+      4
+    ],
+    "88142e2e": [
+      4
     ],
     "88a08fd8": [
-      1,
-      0
+      2
     ],
-    "2d74c3ea": [
-      4,
-      13
-    ],
-    "37ed05fa": [
-      4,
-      13
+    "fb5dbfc2": [
+      0,
+      7
     ],
     "2e99d4d9": [
-      4,
-      13
+      4
     ],
-    "2dc825e8": [
-      3,
-      12
+    "beaebfda": [
+      1
     ],
-    "a8827e0c": [
-      4,
-      13
+    "670cecde": [
+      4
     ],
-    "211ed7ac": [
-      2,
-      11
-    ],
-    "91bcd71c": [
-      1,
-      0
+    "ec4ce022": [
+      4
     ],
     "6902ad1e": [
-      1,
-      0
+      2
     ],
-    "d0c51f14": [
-      4,
-      13
+    "ad13d764": [
+      2
     ],
-    "645e2f7a": [
-      4,
-      13
+    "030830e4": [
+      4
     ],
-    "51c06cff": [
-      5,
-      7,
-      14,
-      15
+    "3464ddef": [
+      4
     ],
-    "8eea9102": [
-      4,
-      13
+    "449b6ab4": [
+      4
     ],
-    "55076fc8": [
-      5,
-      7,
-      14,
-      15
+    "76171c73": [
+      4
     ],
-    "e9f15b30": [
-      1,
-      0
+    "a0c99bc0": [
+      4
     ],
-    "18a16dd6": [
-      4,
-      13
+    "1989ba89": [
+      4
     ],
-    "0b1e29b4": [
-      4,
-      13
+    "2d9c0a74": [
+      4
     ],
-    "2e4edf5a": [
-      4,
-      13
+    "606f9f6d": [
+      4
     ],
-    "eaa652e0": [
-      4,
-      13
+    "4d261ae0": [
+      4
     ],
-    "10a45c9c": [
-      4,
-      13
+    "4104f92e": [
+      4
     ],
-    "3fa0e569": [
-      4,
-      13
+    "bf2fa76c": [
+      4
     ],
-    "d7684e34": [
-      4,
-      13
+    "410bcabf": [
+      4
     ],
-    "106740b1": [
-      4,
-      13
+    "32cae13e": [
+      0,
+      7
     ],
-    "ce20da44": [
-      4,
-      13
+    "6019ef38": [
+      0,
+      7
     ],
-    "d711160e": [
-      3,
-      12
+    "091f43c2": [
+      4
     ],
     "128ce914": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "a923acd0": [
-      4,
-      13
+    "3c886adf": [
+      4
     ],
-    "964b459e": [
-      2,
-      11
+    "601f9ee2": [
+      4
     ],
-    "474cfc8d": [
-      4,
-      13
+    "285cb740": [
+      4
     ],
-    "2bafea54": [
-      4,
-      13
+    "d0b09e8a": [
+      4
     ],
-    "229837bb": [
-      4,
-      13
+    "9db713e0": [
+      4
     ],
-    "9a6232ee": [
-      4,
-      13
+    "c6bd4046": [
+      4
     ],
-    "5e59e63e": [
-      4,
-      13
+    "301f3ef7": [
+      4
     ],
-    "fd0d1fe0": [
-      5,
-      7,
-      14,
-      15
+    "0f9deb36": [
+      4
     ],
-    "bc1c6616": [
-      4,
-      13
+    "3b48f5c1": [
+      4
     ],
-    "3eedab15": [
-      4,
-      13
+    "6f044f84": [
+      4
+    ],
+    "58dc8fd7": [
+      4
+    ],
+    "54b80736": [
+      3
+    ],
+    "9d60787e": [
+      4
     ],
     "33827e83": [
-      4,
-      13
+      4
     ],
     "52236eff": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "32bdd064": [
-      4,
-      13
+    "780b366f": [
+      4
     ],
-    "4b6a256d": [
-      9,
-      10
+    "e6e3ce5c": [
+      0,
+      7
     ],
-    "dd2a659a": [
-      4,
-      13
+    "32b23918": [
+      4
     ],
-    "9e9d0166": [
-      4,
-      13
+    "772504f0": [
+      4
     ],
     "7b4b049a": [
-      5,
-      7,
-      14,
-      15
+      4
     ],
-    "a892edc0": [
-      4,
-      13
+    "6230277f": [
+      4
     ],
-    "d165d67c": [
-      1,
-      0
+    "527cd7c0": [
+      4
     ],
-    "7173bfb7": [
-      4,
-      13
+    "746498e8": [
+      4
     ],
-    "cc1b1770": [
-      5,
-      7,
-      14,
-      15
+    "4f0f6d42": [
+      5
     ],
-    "977ecba0": [
-      9,
-      10
+    "9ca0bc10": [
+      4
     ],
-    "7148d540": [
-      5,
-      7,
-      14,
-      15
+    "6d386a7e": [
+      4
+    ],
+    "0bbe1a7f": [
+      5
+    ],
+    "0d585054": [
+      4
     ],
     "7d56f4d2": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "67afb57c": [
-      4,
-      13
+    "3c11b9c9": [
+      4
     ],
-    "172d717a": [
-      4,
-      13
+    "40e35b6b": [
+      4
     ],
-    "d0d2c236": [
-      4,
-      13
+    "80756cde": [
+      4
     ],
-    "49785cd6": [
-      4,
-      13
+    "642b14c2": [
+      3
     ],
-    "107d77e7": [
-      4,
-      13
-    ],
-    "5e7ea45c": [
-      5,
-      7,
-      14,
-      15
+    "1156e3af": [
+      4
     ],
     "947d34f0": [
-      3,
-      12
+      3
     ],
-    "680456e0": [
-      4,
-      13
+    "cccbbe6c": [
+      4
     ],
-    "2cf2d4ea": [
-      4,
-      13
-    ],
-    "0df04838": [
-      4,
-      13
+    "302776d1": [
+      4
     ],
     "02033b56": [
-      4,
-      13
+      4
     ],
-    "e077cf3e": [
-      4,
-      13
+    "b48342a0": [
+      4
     ],
-    "7c45b238": [
-      5,
-      7,
-      14,
-      15
+    "c8d3b15e": [
+      4
     ],
-    "14f34f34": [
-      4,
-      13
+    "045ae712": [
+      2
     ],
-    "a9d3cc1e": [
-      1,
-      0
+    "fee142fa": [
+      4
     ],
-    "a73b0450": [
-      4,
-      13
+    "af7c31e0": [
+      4
     ],
-    "0482b3e4": [
-      4,
-      13
+    "7a851d1c": [
+      4
     ],
-    "10f85fd1": [
-      2,
-      11
+    "061a77fb": [
+      4
     ],
-    "fe60a9f2": [
-      4,
-      13
+    "8e7ea4b4": [
+      0,
+      7
     ],
-    "0483c257": [
-      4,
-      13
+    "128c7278": [
+      4
     ],
-    "a37e642c": [
-      4,
-      13
+    "456ea997": [
+      4
     ],
-    "fed496f4": [
-      4,
-      13
+    "e09c5c22": [
+      4
     ],
-    "cbae1bd6": [
-      4,
-      13
+    "d3fa3bd2": [
+      4
     ],
-    "870ab4d8": [
-      4,
-      13
+    "01a2d95a": [
+      0,
+      7
     ],
-    "26b50220": [
-      4,
-      13
+    "0c8781d8": [
+      2
     ],
-    "6d8bd947": [
-      4,
-      13
-    ],
-    "0f4c669a": [
-      4,
-      13
-    ],
-    "2438e970": [
-      4,
-      13
-    ],
-    "31467ad4": [
-      5,
-      7,
-      14,
-      15
+    "04131516": [
+      4
     ],
     "9d102996": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "2028ebc9": [
-      4,
-      13
+      0,
+      7
     ],
     "1c0379e3": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "4698d11c": [
-      4,
-      13
+    "3ecb6690": [
+      0,
+      7
     ],
-    "5681189a": [
-      4,
-      13
+    "7e5708f6": [
+      4
     ],
-    "b25e5a00": [
-      4,
-      13
+    "3747d9e2": [
+      4
+    ],
+    "475bab3d": [
+      4
+    ],
+    "af5afe9e": [
+      4
     ],
     "43bdf916": [
-      5,
-      7,
-      14,
-      15
+      4
     ],
-    "3fd493d2": [
-      5,
-      7,
-      14,
-      15
+    "6906380e": [
+      4
     ],
-    "0a15f7a6": [
-      4,
-      13
+    "cf22443c": [
+      4
     ],
-    "0b1b5941": [
-      5,
-      7,
-      14,
-      15
+    "46f77a14": [
+      4
     ],
-    "2be03ee2": [
-      4,
-      13
+    "2f437057": [
+      4
     ],
-    "0579d661": [
-      4,
-      13
+    "061ec776": [
+      4
     ],
-    "a85f3f76": [
-      4,
-      13
+    "734b30e6": [
+      4
     ],
-    "36ad6d92": [
-      4,
-      13
+    "8112b544": [
+      4
+    ],
+    "5b6cd0f8": [
+      4
+    ],
+    "0dcc89c3": [
+      4
+    ],
+    "070a46c2": [
+      4
+    ],
+    "5105f327": [
+      0,
+      7
     ],
     "7870e0a3": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "456916c8": [
-      4,
-      13
+    "0157022d": [
+      4
     ],
-    "73dd295e": [
-      4,
-      13
+    "4ce1c55b": [
+      4
+    ],
+    "1a67e7ed": [
+      4
+    ],
+    "6ada15c2": [
+      4
+    ],
+    "52e7f1d8": [
+      4
+    ],
+    "539c92a3": [
+      4
     ],
     "175a852f": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "4ebf2f56": [
-      4,
-      13
+    "8b3c7ae8": [
+      4
     ],
-    "9fa47a64": [
-      4,
-      13
-    ],
-    "87d12d60": [
-      4,
-      13
-    ],
-    "062cd7d7": [
-      4,
-      13
+    "e02155d4": [
+      4
     ],
     "9a9b7efe": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "34e4516a": [
-      4,
-      13
-    ],
-    "c98036cc": [
-      4,
-      13
+    "325d521e": [
+      4
     ],
     "34a0790b": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "7fdb7fb5": [
-      4,
-      13
+    "627fbf42": [
+      4
     ],
-    "81cd08f8": [
-      4,
-      13
+    "7548143f": [
+      4
     ],
-    "0d01a9b1": [
-      9,
-      10
+    "38c2866b": [
+      4
     ],
-    "10b17756": [
-      4,
-      13
+    "1db6f8b3": [
+      4
     ],
-    "4f055832": [
-      4,
-      13
+    "0b39b032": [
+      4
     ],
-    "2188eb98": [
-      4,
-      13
+    "2ee41910": [
+      2
     ],
-    "18838ce9": [
-      3,
-      12
+    "3816f90a": [
+      4
     ],
-    "221d4281": [
-      4,
-      13
+    "0bcc3200": [
+      1
     ],
-    "875da2ac": [
-      4,
-      13
+    "56df8df8": [
+      4
     ],
-    "101dff2c": [
-      4,
-      13
+    "302397a3": [
+      4
     ],
-    "5e313c00": [
-      4,
-      13
-    ],
-    "ad9956c6": [
-      4,
-      13
-    ],
-    "6f3e6c9e": [
-      4,
-      13
+    "cb63de1a": [
+      4
     ],
     "c012ce08": [
-      4,
-      13
+      4
     ],
-    "465781db": [
-      4,
-      13
+    "99dd6764": [
+      4
     ],
-    "3f42717b": [
-      4,
-      13
+    "ad44ace2": [
+      4
     ],
-    "b9846196": [
-      5,
-      7,
-      14,
-      15
+    "4c78639e": [
+      4
     ],
-    "7bcb24ff": [
-      5,
-      7,
-      14,
-      15
+    "ee23c122": [
+      2
     ],
-    "12b206eb": [
-      4,
-      13
-    ],
-    "3d10fd36": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "89fb6bd2": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "dc1820b2": [
-      4,
-      13
+    "c1f2e884": [
+      4
     ],
     "d0e584b6": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "11d68e4a": [
-      4,
-      13
+    "410984e4": [
+      4
     ],
-    "5aa4bacd": [
-      4,
-      13
+    "5961a1ce": [
+      4
     ],
-    "0df0c25c": [
-      4,
-      13
+    "0e6b20a2": [
+      4
+    ],
+    "1111cf5f": [
+      4
     ],
     "1e05d5c6": [
-      9,
-      10
+      1
     ],
-    "783222fc": [
-      4,
-      13
+    "466ad25b": [
+      4
     ],
-    "a12394e4": [
-      4,
-      13
+    "1fc4a302": [
+      4
     ],
-    "d0c9aaca": [
-      4,
-      13
+    "7180ff84": [
+      4
     ],
-    "5e6084f1": [
-      1,
-      0
+    "79533e28": [
+      4
     ],
     "40391c11": [
-      4,
-      13
-    ],
-    "74153eee": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "2d9a3e8f": [
-      4,
-      13
+      4
     ],
     "1b032524": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "a29f4cc0": [
-      1,
-      0
+    "4f0586e4": [
+      4
     ],
-    "12dacd30": [
-      4,
-      13
+    "17fa6ba3": [
+      4
     ],
-    "55e5819e": [
-      5,
-      7,
-      14,
-      15
+    "546fc3b4": [
+      4
     ],
-    "7bb2f2a6": [
-      4,
-      13
+    "1f191cc2": [
+      2
     ],
-    "17a3572a": [
-      4,
-      13
+    "27fc65ad": [
+      4
+    ],
+    "04903d25": [
+      4
     ],
     "7d28890e": [
-      5,
-      7,
-      14,
-      15
+      4
     ],
-    "3a08e68b": [
-      5,
-      7,
-      14,
-      15
+    "444f2a70": [
+      4
     ],
     "52a195b8": [
-      4,
-      13
-    ],
-    "9c7e6144": [
-      4,
-      13
+      4
     ],
     "3d17873c": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "d45cfe1c": [
-      1,
-      0
+    "b1d54a78": [
+      0,
+      7
     ],
-    "1134af74": [
-      4,
-      13
+    "f0f1fbec": [
+      4
     ],
     "1d47a54c": [
-      5,
-      7,
-      14,
-      15
+      4
     ],
-    "d712336a": [
-      4,
-      13
+    "5b28eff0": [
+      4
     ],
-    "95b36600": [
-      4,
-      13
+    "6f4542e9": [
+      4
     ],
-    "28fd2dbf": [
-      4,
-      13
+    "30adc2b5": [
+      2
     ],
     "d93d7826": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "0d9b6cb2": [
-      2,
-      11
+    "21bac13e": [
+      0,
+      7
     ],
-    "7b4ec17d": [
-      4,
-      13
+    "0bc0da01": [
+      4
     ],
-    "25a2209d": [
-      4,
-      13
+    "8a2e66e0": [
+      4
     ],
-    "4bbab687": [
-      4,
-      13
+    "1d4b83a7": [
+      4
     ],
-    "5fda5646": [
-      4,
-      13
+    "710c5622": [
+      4
     ],
     "1df7be45": [
-      2,
-      11
+      5
     ],
-    "6e072836": [
-      4,
-      13
+    "51db8d35": [
+      4
     ],
-    "731a9af9": [
-      4,
-      13
+    "3d35c6ce": [
+      4
+    ],
+    "13fcabc1": [
+      4
+    ],
+    "201f0692": [
+      4
+    ],
+    "7e779f20": [
+      4
+    ],
+    "411efa38": [
+      4
+    ],
+    "425ded27": [
+      4
+    ],
+    "ab979406": [
+      4
     ]
   }
 }
